# streamrip

./: .gitignore  Cargo.toml  pyproject.toml  source.rs
src/: main.rs
streamrip/: clients.py  spoofbuz.py
streamrip-lib/: Cargo.toml  REFACTOR.md
streamrip-lib/src/: base.rs  constants.rs  lib.rs  metadata.rs  utils.rs
streamrip-lib/src/clients/: mod.rs  qobuz.rs  tidal.rs
streamrip-py/: clients.py  spoofbuz.py
