[package]
name = "streamrip_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-native-tls = "0.3.0"
custom_error = "1.9.2"
base64 = "0.13"
hashbrown = "0.11"
serde_json = "1.0"
md5 = "0.7"
log = "0.4"
fern = "0.5"
chrono = "0.4"
ahash = { version = "0.7", features = ["serde"]}
[dev-dependencies]
rstest = "0.12"
